tests/snapshots/run_wpt_conformance__coreml_lesser_float16_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser.https.any.js lesser float16 0D scalar, coreml
 lesser :: lesser float16 0D scalar: index 0: actual=0 expected=1 tolerance=0
  inputs: inputA: [-0.52294921875]; inputB: [0.81494140625]
  expected output: [1]
  actual output: [0]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f16[];
    inputB: f16[];
  }

  nodes {
    [output] = lesser(inputA, inputB, label="");
  }

  outputs { output; }
}
