tests/snapshots/run_wpt_conformance__coreml_lesser_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
lesser.https.any.js lesser float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([151, 188, 52, 200, 141, 192, 158, 184, 22, 72, 66, 187, 74, 69, 212, 195, 234, 72, 119, 200, 234, 194, 85, 199, 238, 60, 80, 68, 22, 61, 47, 68, 182, 198, 39, 66, 3, 60, 138, 200, 116, 72, 60, 68, 52, 64, 52, 198]);
    operand_1: f16[24] @bytes([228, 65, 118, 67, 6, 68, 184, 196, 198, 70, 22, 192, 135, 198, 212, 70, 162, 200, 30, 70, 1, 192, 31, 63, 212, 72, 127, 193, 222, 194, 192, 196, 24, 198, 240, 182, 161, 189, 153, 179, 142, 200, 208, 70, 197, 198, 122, 200]);
  }

  nodes {
    [output] = lesser(operand_0, operand_1, label="");
  }

  outputs { output; }
}
